@@ -6,14 +6,28 @@ EAPI=5
 
 PYTHON_COMPAT=( python2_7 )
 
+<<<<<<< HEAD
 inherit distutils-r1
 
 DESCRIPTION="Normalization templates for Python Neuroimaging"
+=======
+inherit distutils-r1 eutils multilib flag-o-matic
+
+DESCRIPTION="Neuroimaging tools for Python"
+>>>>>>> 9280b26... sci-libs/nipy-templates: new package
 HOMEPAGE="http://nipy.org/"
 SRC_URI="http://nipy.org/data-packages/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
+<<<<<<< HEAD
 KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
 IUSE=""
 
+=======
+KEYWORDS="amd64 x86 amd64-linux x86-linux"
+IUSE=""
+
+RDEPEND=""
+DEPEND=""
+>>>>>>> 9280b26... sci-libs/nipy-templates: new package
