@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 # ChangeLog for sci-libs/nipy-templates
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
@@ -11,6 +12,12 @@
   17 Dec 2015; Horea Christian <h.chr@mail.ru> nipy-templates-0.2.ebuild:
   sci-libs/nipy-templates: removed empty dependency lists
 
+=======
+# ChangeLog for sci-libs/nipy-data
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Id$
+
+>>>>>>> 9280b26... sci-libs/nipy-templates: new package
 *nipy-data-0.2 (16 Dec 2015)
 
   16 Dec 2015; Horea Christian <h.chr@mail.ru> +metadata.xml,
